--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -45,16 +45,13 @@ $card-shadow: rgba(180, 180, 180, 0.16);
   padding: 5px;
 }
 .m-10 {
-  // margin: 10px 0;
   margin: auto;
 }
 .text-center {
   text-align: center;
 }
 body {
-  // font-family: "Poppins", sans-serif;
   font-family: "Poppins", sans-serif;
-  // font-weight: 300;
 }
 a,
 a:hover,
@@ -101,23 +98,54 @@ a:focus {
   margin: auto;
 }
 
-nav {
-  display: flex;
-  justify-content: space-between;
-  width: 90%;
-  margin: 50px auto;
-
-  ul {
+header {
+  .container {
     display: flex;
-    // flex-direction: row;
-    li {
-      margin: 0 15px;
-      // justify-content: space-around;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5%;
+    a.nav-brand {
+      text-transform: uppercase;
     }
   }
-  a {
-    font-weight: 600;
-    color: $black-100;
+
+  nav ul {
+    list-style: none;
+    li {
+      display: inline-block;
+      padding: 0 10px;
+      text-transform: capitalize;
+      font-size: 0.92em;
+      a {
+        color: $black-100;
+        text-decoration: none;
+      }
+    }
+  }
+  #ham {
+    display: none;
+
+    div {
+      background-color: #6c6c6cad;
+      width: 20px;
+      height: 3px;
+      margin: 3px;
+    }
+  }
+
+  .activeul {
+    position: absolute;
+    right: 0px;
+    height: 100%;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+    background-color: rgb(248, 248, 248);
+    li {
+      margin: 25px 0;
+    }
   }
 }
 
@@ -125,9 +153,6 @@ nav {
   width: 90%;
   margin: auto;
   min-height: 90vh;
-  // display: flex;
-  // text-align: initial;
-  // justify-content: space-between;
   h1 {
     font-size: 2.34rem;
     font-weight: 800;
@@ -139,8 +164,6 @@ nav {
     color: $grey-100;
     font-weight: 500;
     line-height: 1.5;
-    // margin: 10px auto;
-    // margin: 15px 25px 15px 5px;
     margin: 15px 5px;
   }
   a {
@@ -150,17 +173,14 @@ nav {
     width: 100%;
     margin: auto;
     text-align: right;
-    // position: absolute;
   }
 }
 h1 {
   font-size: 2.34rem;
   font-weight: 800;
   line-height: 1.6;
-  // margin: 15px 5px;
 }
 .insurance-choose {
-  // padding-top: 50px;
   min-height: 135vh;
   h1 {
     padding-top: 25px;
@@ -177,21 +197,17 @@ h1 {
     flex-wrap: wrap;
     flex-basis: 33.333333%;
     justify-content: space-around;
-    // margin-bottom: 80px;
     .card {
       background-color: #fff;
-      // border: 1px solid $card-border;
       box-shadow: 0 3px 6px $card-shadow;
 
       margin: 15px 2px;
       border-radius: 5px;
-      // padding: 2p;
       width: 30%;
       .card-body {
         margin: 20px;
         .card-title {
           margin: 10px 10px 25px 10px;
-          // text-align: center;
         }
         .card-text {
           margin: 10px;
@@ -204,10 +220,8 @@ h1 {
           font-weight: 600;
           font-size: 0.78rem;
           margin: 10px;
+          display: block;
         }
-      }
-      p {
-        // margin: 20px;
       }
     }
   }
@@ -226,8 +240,6 @@ h1 {
     color: $grey-100;
     font-weight: 500;
     line-height: 1.5;
-    // margin: 10px auto;
-    // margin: 15px 25px 15px 5px;
     margin: 15px 5px;
   }
   .short-desc {
@@ -243,7 +255,6 @@ h1 {
     width: 100%;
     margin: auto;
     text-align: right;
-    // position: absolute;
   }
 }
 
@@ -275,7 +286,6 @@ h1 {
         justify-content: center;
       }
       h5 {
-        // font-size: 0.78rem;
         margin: 15px auto;
       }
       p {
@@ -294,10 +304,8 @@ footer {
     font-size: 1.3 2rem;
     line-height: 1.6;
     color: $white-100;
-    // margin-left: 130px;
   }
   hr {
-    // color: $secondary-color;
     border: 1px solid #023d7c59;
     margin: 25px auto;
   }
@@ -343,9 +351,6 @@ footer {
 }
 
 @media screen and (max-width: 560px) {
-  nav {
-    display: none;
-  }
   .row {
     flex-direction: column;
   }
@@ -362,6 +367,23 @@ footer {
     width: 90%;
     margin: auto;
   }
+  h1 {
+    font-size: 2.14rem;
+  }
+  header {
+    nav ul {
+      display: none;
+    }
+
+    #ham {
+      display: block;
+      cursor: pointer;
+      z-index: 5;
+    }
+  }
+  a.btn.btn-primary {
+    margin-bottom: 25px;
+  }
   .insurance-choose p.lead {
     width: 100%;
   }
@@ -374,6 +396,69 @@ footer {
   footer {
     .col-3 {
       margin: 15px 0;
+    }
+  }
+}
+@media screen and (min-width: 790px) and (max-width: 1199px) {
+  .hero {
+    min-height: 80vh;
+  }
+  .insurance-choose {
+    min-height: 125vh;
+  }
+  .how-we-work {
+    min-height: 110vh;
+  }
+  .why-us {
+    min-height: 75vh;
+  }
+}
+@media screen and (min-width: 1200px) and (max-width: 1800px) {
+  .btn {
+    padding: 0.65rem 1.95rem;
+    font-size: 1.2rem;
+  }
+  p {
+    font-size: 1.1rem !important;
+  }
+  header {
+    font-size: 1.32rem;
+  }
+  .hero {
+    width: 90%;
+    margin: auto;
+    min-height: 75vh;
+    h1 {
+      font-size: 2.24rem;
+    }
+    p {
+      font-size: 1.21rem;
+    }
+  }
+  .insurance-choose {
+    min-height: 100vh;
+    .insurance-card-list .card .card-body {
+      .card-title {
+        margin: 10px 10px 25px 10px;
+        font-size: 1.21rem;
+        line-height: 1.5;
+      }
+      .card-link {
+        // color: #0a51a1;
+        // font-weight: 600;
+        font-size: 0.98rem;
+        margin: 20px 10px;
+      }
+    }
+  }
+  .how-we-work {
+    min-height: 80vh;
+  }
+  .why-us {
+    min-height: 60vh;
+    .short-desc h4 {
+      margin: 15px 5px;
+      font-size: 1.5rem;
     }
   }
 }
